--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,11 @@
             </div>
         </div>
     </header>
-    <main>
+
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+    <main id="main" class="blurred">
         <section class="hero">
             <div class="hero__main hidden-tablet">
                     <div class="hero__body">
